--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2>Proyectos</h2>
       <ul>
         <li><a href="https://github.com/ThomasAlvenin/toggleid-thomas">toggleid-thomas | Script básico para enseñar IDs por tecla. | FiveM</a></li>
-        <li><a href="#">Proyecto 2</a></li>
+        <li><a href="https://github.com/ThomasAlvenin/Clima-Actual-JS">Clima-Actual-JS</a></li>
         <li><a href="#">Proyecto 3</a></li>
       </ul>
     </section>
